# ble_adv_covid

./: .gitignore  README.md  adv_covid.ino  ble_adv_covid.ino
BLEelectronics/: NordicDongle.step
BLEelectronics/CR2025_Nordic/: CR2025_Nordic-cache.lib  CR2025_Nordic-rescue.lib  CR2025_Nordic.kicad_pcb  CR2025_Nordic.kicad_pcb-bak  CR2025_Nordic.sch  CR2025_Nordic.sch-bak  CR2025_Nordic.xml  CR2025_Nordic_BOM_30APR2020.csv  CR2025_Nordic_BOMfull_v3_bom_.csv  CR2025_Nordic_bom_.csv  CR2025_Nordic_bom_lcsc.csv  fp-info-cache  sym-lib-table
BLEelectronics/ble_covid_opensource_hw/: ble_covid_opensource_hw-cache.lib  ble_covid_opensource_hw.kicad_pcb  ble_covid_opensource_hw.kicad_pcb-bak  ble_covid_opensource_hw.pro  ble_covid_opensource_hw.sch  ble_covid_opensource_hw.sch-bak  fp-info-cache  nRF52840_QIAA_R.sch  nRF52840_QIAA_R.sch-bak  sym-lib-table
BLEelectronics/ble_mvp_1A-rev0/: CR2025_Nordic-cache.lib  CR2025_Nordic-rescue.lib  CR2025_Nordic.sch  CR2025_Nordic.xml  ble_mvp_1A-rev0-cache.lib  ble_mvp_1A-rev0.kicad_pcb  fp-lib-table  (+4 more)
modified_files/: BLEAdvertising.cpp  BLEAdvertising.h
sparkfun/: sync.sh
zephyr/: nrf52840dongle_nrf52840.dts.mvp1a_rev0  nrf52840dongle_nrf52840.dts.mvp1a_rev1  python_test_code.py
zephyr/encounter/: CMakeLists.txt  Kconfig  README.md  lll_scan.c  prj.conf
zephyr/encounter/boards/: nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.overlay
zephyr/encounter/src/: adv.c  button.c  encounter.h  file.c  led.c  led.h  led_global.h  main.c  rpi.c  scan.c
zephyr/hello_crypto/: CMakeLists.txt
zephyr/hello_crypto/src/: main.c
(+552 files in other folders)
